--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "synthesia",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://danielantelo.github.io/synthesia",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
