--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -19,16 +19,16 @@ jobs:
       - run: npm run lint
       - run: npm run typecheck
       - run: npm run test --watchAll false
-      - name: Run storybook visual regression
-        run: |
-          APPCMD="npm run storybook"
-          CYPRESSCMD="npm run cy:storybook --env requireSnapshots=true"
-          npx start-server-and-test "$APPCMD" 6006 "$CYPRESSCMD"       
-      - name: Run webapp tests
-        run: |
-          APPCMD="npm run start"
-          CYPRESSCMD="npm run cy --env requireSnapshots=true"
-          npx start-server-and-test "$APPCMD" 3000 "$CYPRESSCMD"      
+      # - name: Run storybook visual regression
+      #   run: |
+      #     APPCMD="npm run storybook"
+      #     CYPRESSCMD="npm run cy:storybook --env requireSnapshots=true"
+      #     npx start-server-and-test "$APPCMD" 6006 "$CYPRESSCMD"       
+      # - name: Run webapp tests
+      #   run: |
+      #     APPCMD="npm run start"
+      #     CYPRESSCMD="npm run cy --env requireSnapshots=true"
+      #     npx start-server-and-test "$APPCMD" 3000 "$CYPRESSCMD"      
       - name: Build Web
         run: npm run build
       - name: Deploy to GitHub Pages
