--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Editor",
-  "name": "Synthesia Coding Challenge",
+  "name": "Editor",
   "icons": [
     {
       "src": "favicon.ico",
